# Crawler

./: README.MD  main.py  pyproject.toml
app/: config.py  converter.py  megafon.py  session_file.txt  telegram.py  telegram_ban.py  teleraptor.py  teleraptor_2.py
